--- a/.github/workflows/ymzhaun.yml
+++ b/.github/workflows/ymzhaun.yml
@@ -1,45 +1,30 @@
-name: 羊毛赚
+name: 中青看点1
 
 on:
   workflow_dispatch:
-  schedule:
-     - cron: '0 8,12 * * *'
   watch:
     types: started
+  schedule:
+    - cron: '*/30 0-23 * * *'
 jobs:
   build:
-    runs-on: ubuntu-latest
-    if: github.event.repository.owner.id == github.event.sender.id
-    env:
-        YMZ_ymzhuanggBODY: ${{ secrets.YMZ_ymzhuanggBODY }}
-        YMZ_ymzhuanspBODY: ${{ secrets.YMZ_ymzhuanspBODY }}
-        YMZ_ymzhuantxBODY: ${{ secrets.YMZ_ymzhuantxBODY }}		
-        
+    runs-on: ubuntu-latest    
     steps:
       - name: Checkout
         run: |
-          git clone https://github.com/66903202/ziye.git ~/ziye
-      - name: Use Node.js 12.x
+          git clone https://github.com/66903202/cxk.git ~/cxk
+      - name: Use Node.js 14.x
         uses: actions/setup-node@v1
         with:
-          node-version: 12.x
+          node-version: 14.x
       - name: npm install
-        if: env.YMZ_ymzhuanggBODY
         run: |
           cd ~/ziye
           npm install
+          npm install cron
+          npm install request
+          npm install md5-node
       - name: '运行 【羊毛赚】'
-        if: env.YMZ_ymzhuanggBODY
         run: |
-          cd ~/ziye
+          cd ~/ziye   
           node Task/ymzhuan.js
-        env:
-          
-          PUSH_KEY: ${{ secrets.PUSH_KEY }}
-          BARK_PUSH: ${{ secrets.BARK_PUSH }}
-          TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
-          TG_USER_ID: ${{ secrets.TG_USER_ID }}
-          BARK_SOUND: ${{ secrets.BARK_SOUND }}
-          DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
-          DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
-          
