--- a/.github/workflows/yuedongzu.yml
+++ b/.github/workflows/yuedongzu.yml
@@ -3,7 +3,7 @@ name: 悦动族
 on:
   workflow_dispatch:
   schedule:
-     - cron: '0,30 16-15 * * *'
+     - cron: '*/30 * * * *'
   watch:
     types: started
 jobs:
