--- a/.github/workflows/fqkk.yml
+++ b/.github/workflows/fqkk.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 # 运行时间从北京时间12点半开始，每隔90分钟一次，执行6次，最后一次在晚上8点
-name: fqkk@feizao3 
+name: 番茄看看@feizao3 
 
 on:
   workflow_dispatch:
@@ -16,7 +16,7 @@ jobs:
     env:
       fqkkurl: ${{ secrets.fqkkurl }}
       fqkkhd: ${{ secrets.fqkkhd }}   
-      PUSH_KEY: ${{ secrets.PUSH_KEY }}
+      BARK_PUSH: ${{ secrets.BARK_PUSH }}
       TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
       TG_USER_ID: ${{ secrets.TG_USER_ID }}
 
