--- a/.github/workflows/hotsoon.yml
+++ b/.github/workflows/hotsoon.yml
@@ -26,7 +26,7 @@ jobs:
           npm install
       - name: '运行 【火山小视频极速版】'
         run: |
-          node node/hotsoon.js
+          node Task/hotsoon.js
         env:
           HOTSOONSIGNHEADER: ${{ secrets. HOTSOONSIGNHEADER }}
           HOTSOONSIGNKEY: ${{ secrets. HOTSOONSIGNKEY }}
