--- a/.github/workflows/xiaole.yml
+++ b/.github/workflows/xiaole.yml
@@ -1,7 +1,3 @@
-  
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
 name: 小乐
 
 on:
@@ -15,9 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
     env:
-        
         XL_URL: ${{ secrets.XL_URL }}
-        XL_HEADER: ${{ secrets.XL_HEADER }}
+        XL_HEADER: ${{ secrets.XL_HEADER }}		
+       
     steps:
       - name: Checkout
         run: |
@@ -30,6 +26,7 @@ jobs:
         if: env.XL_URL
         run: |
           cd ~/ziye
+          git checkout ZIYE
           npm install
       - name: '运行 【小乐】'
         if: env.XL_URL
