--- a/.github/workflows/xiaole.yml
+++ b/.github/workflows/xiaole.yml
@@ -1,3 +1,9 @@
+# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
+# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
+# push:
+#   branches: 
+#   - master 
+
 name: 小乐
 
 on:
@@ -5,40 +11,30 @@ on:
   schedule:
      - cron: '*/30 0-5 * * *'
   watch:
-    types: started
+     types: started
+    
 jobs:
   build:
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
-    env:
-        XL_URL: ${{ secrets.XL_URL }}
-        XL_HEADER: ${{ secrets.XL_HEADER }}		
-       
     steps:
-      - name: Checkout
-        run: |
-          git clone https://github.com/66903202/ziye.git ~/ziye
-      - name: Use Node.js 12.x
+      - uses: actions/checkout@v1
+      - name: Use Node.js 10.x
         uses: actions/setup-node@v1
         with:
-          node-version: 12.x
+          node-version: 10.x
       - name: npm install
-        if: env.XL_URL
         run: |
-          cd ~/ziye
-          git checkout ZIYE
           npm install
       - name: '运行 【小乐】'
-        if: env.XL_URL
         run: |
-          cd ~/ziye
           node Task/xiaole.js
         env:
-          
+          XL_URL: ${{ secrets.XL_URL }}
+          XL_HEADER: ${{ secrets.XL_HEADER }}
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
           BARK_PUSH: ${{ secrets.BARK_PUSH }}
+          TXNEWS_NOTIFY_CONTROL: ${{ secrets.TXNEWS_NOTIFY_CONTROL }}
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
           TG_USER_ID: ${{ secrets.TG_USER_ID }}
           BARK_SOUND: ${{ secrets.BARK_SOUND }}
-          DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
-          DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
