--- a/.github/workflows/flw.yml
+++ b/.github/workflows/flw.yml
@@ -1,5 +1,8 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
+# push:
+#   branches: 
+#   - master 
 
 name: 返利网
 
@@ -8,44 +11,34 @@ on:
   schedule:
      - cron: '0 2,4 * * *'
   watch:
-    types: started
+     types: started
+    
 jobs:
   build:
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
-    env:
-        FL_flwURL: ${{ secrets.FL_flwURL }}
-        FL_flwHEADER: ${{ secrets.FL_flwHEADER }}		
-        FL_flwspBODY: ${{ secrets.FL_flwspBODY }}	
-        FL_flwqwBODY: ${{ secrets.FL_flwqwBODY }}        
-        FL_CASH: ${{ secrets.FL_CASH }}//天天领现金提现
-        FL_DHCASH: ${{ secrets.FL_DHCASH }}//签到活动兑换
     steps:
-      - name: Checkout
-        run: |
-          git clone https://github.com/66903202/ziye.git ~/ziye
-      - name: Use Node.js 12.x
+      - uses: actions/checkout@v1
+      - name: Use Node.js 10.x
         uses: actions/setup-node@v1
         with:
-          node-version: 12.x
+          node-version: 10.x
       - name: npm install
-        if: env.FL_flwURL
         run: |
-          cd ~/ziye
           npm install
       - name: '运行 【返利网】'
-        if: env.FL_flwURL
         run: |
-          cd ~/ziye
           node Task/flw.js
         env:
-          
+          FL_flwURL: ${{ secrets.FL_flwURL }}
+          FL_flwHEADER: ${{ secrets.FL_flwHEADER }}		
+          FL_flwspBODY: ${{ secrets.FL_flwspBODY }}	
+          FL_flwqwBODY: ${{ secrets.FL_flwqwBODY }}        
+          FL_CASH: ${{ secrets.FL_CASH }}//天天领现金提现
+          FL_DHCASH: ${{ secrets.FL_DHCASH }}//签到活动兑换
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
           BARK_PUSH: ${{ secrets.BARK_PUSH }}
+          TXNEWS_NOTIFY_CONTROL: ${{ secrets.TXNEWS_NOTIFY_CONTROL }}
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
           TG_USER_ID: ${{ secrets.TG_USER_ID }}
           BARK_SOUND: ${{ secrets.BARK_SOUND }}
-          DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
-          DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
-
-    
