--- a/.github/workflows/sqxs.yml
+++ b/.github/workflows/sqxs.yml
@@ -10,7 +10,7 @@ jobs:
       
       - name: Checkout
         run: |
-          git clone https://github.com/QingAnLe/SQ.git ~/js
+          git clone https://github.com/66903202/ziye.git ~/js
       - name: Use Node.js 14.x
         uses: actions/setup-node@v1
         with:
