--- a/.github/workflows/bububao.yml
+++ b/.github/workflows/bububao.yml
@@ -9,7 +9,7 @@ name: 步步宝
 on:
   workflow_dispatch:
   schedule:
-     - cron: '*/30 0-23 * * *'
+     - cron: '*/30 0-23/1 * * *'
   watch:
      types: started
     
