--- a/.github/workflows/hotsoon.yml
+++ b/.github/workflows/hotsoon.yml
@@ -1,30 +1,45 @@
-# This is a basic workflow to help you get started with Actions
+# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
+ # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: 火山极速
+ name: 火山小视频极速版
 
-on:
-  workflow_dispatch:
-  schedule:
-    - cron: '*/5 0-23/1 * * *'
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    if: github.event.repository.owner.id == github.event.sender.id
-    steps:
-      - name: Checkout
-        run: |
-          git clone https://github.com/niubi-66/B.git ~/js
-      - name: Use Node.js 14.x
-        uses: actions/setup-node@v1
-        with:
-          node-version: 14.x
-      - name: npm install
-        run: |
-          cd ~/B
-          npm install
-          npm install cron
-          npm install request
-      - name: '运行 【火山极速】'
-        run: |
-          cd ~/B   
-          node Task/hotsoon.js
+ on:
+   workflow_dispatch:
+   schedule:
+     - cron: '*/5 * * * *'
+   watch:
+     types: started
+   repository_dispatch:
+     types: hotsoon
+ jobs:
+   build:
+     runs-on: ubuntu-latest
+     steps:
+       - name: Checkout
+         uses: actions/checkout@v2
+       - name: Use Node.js 12.x
+         uses: actions/setup-node@v1
+         with:
+           node-version: 12.x
+       - name: npm install
+         run: |
+           npm install
+       - name: '运行 【火山小视频极速版】'
+         run: |
+           node Task/hotsoon.js
+         env:
+           HOTSOONSIGNHEADER: ${{ secrets. HOTSOONSIGNHEADER }}
+           HOTSOONSIGNKEY: ${{ secrets. HOTSOONSIGNKEY }}
+           HOTSOONADHEADER: ${{ secrets. HOTSOONADHEADER }}
+           HOTSOONADKEY: ${{ secrets. HOTSOONADKEY }}
+           HOTSOONREADHEADER: ${{ secrets. HOTSOONREADHEADER }}
+           HOTSOONREADKEY: ${{ secrets. HOTSOONREADKEY }}
+           JD_DEBUG: ${{ secrets.JD_DEBUG }}
+           PUSH_KEY: ${{ secrets.PUSH_KEY }}
+           BARK_PUSH: ${{ secrets.BARK_PUSH }}
+           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
+           TG_USER_ID: ${{ secrets.TG_USER_ID }}
+           BARK_SOUND: ${{ secrets.BARK_SOUND }}
+           DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
+           DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
+           IGOT_PUSH_KEY: ${{ secrets.IGOT_PUSH_KEY }}
