--- a/.github/workflows/ysm.yml
+++ b/.github/workflows/ysm.yml
@@ -1,43 +1,38 @@
-name: 云扫码
+# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
+# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
+# push:
+#   branches: 
+#   - master 
 
+name: 步步宝
 
 on:
   workflow_dispatch:
   schedule:
-     - cron: '0,30 1-15 * * *'
+     - cron: '*/30 0-23/1 * * *'
   watch:
-    types: started
+     types: started
+    
 jobs:
   build:
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
-    env:
-        YSM_URL: ${{ secrets.YSM_URL }}
-        YSM_HD: ${{ secrets.YSM_HD }}    
-        YSM_BD: ${{ secrets.YSM_BD }} 
-        YSM2_BD: ${{ secrets.YSM2_BD }}   
-        YSM_TX: ${{ secrets.YSM_TX }}   
-        TZ: Asia/shanghai
     steps:
-      - name: Checkout
-        uses: actions/checkout@v1
-        
-      - name: Use Node.js 12.x
+      - uses: actions/checkout@v1
+      - name: Use Node.js 10.x
         uses: actions/setup-node@v1
         with:
-          node-version: 12.x
+          node-version: 10.x
       - name: npm install
         run: |
           npm install
       - name: '运行 【云扫码】'
-        if: env.YSM_HD
         run: |
           node Task/ysm.js
         env:
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
           BARK_PUSH: ${{ secrets.BARK_PUSH }}
+          TXNEWS_NOTIFY_CONTROL: ${{ secrets.TXNEWS_NOTIFY_CONTROL }}
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
           TG_USER_ID: ${{ secrets.TG_USER_ID }}
           BARK_SOUND: ${{ secrets.BARK_SOUND }}
-          DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
-          DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
