--- a/.github/workflows/iboxpay.yml
+++ b/.github/workflows/iboxpay.yml
@@ -1,48 +1,39 @@
-  
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
+# push:
+#   branches: 
+#   - master 
 
-name: 笑谱
+name: 步步宝
 
 on:
   workflow_dispatch:
   schedule:
-     - cron: '*/30 0-15 * * *'
+     - cron: '*/30 0-23/1 * * *'
   watch:
-    types: started
+     types: started
+    
 jobs:
   build:
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
-    env:
-        
-        XP_refreshTOKEN: ${{ secrets.XP_refreshTOKEN }}
-        XP_CASH: ${{ secrets.XP_CASH }}
-        XP_live: ${{ secrets.XP_live }}
     steps:
-      - name: Checkout
-        run: |
-          git clone https://github.com/fridayon/ziye.git ~/ziye
-      - name: Use Node.js 12.x
+      - uses: actions/checkout@v1
+      - name: Use Node.js 10.x
         uses: actions/setup-node@v1
         with:
-          node-version: 12.x
+          node-version: 10.x
       - name: npm install
-        if: env.XP_refreshTOKEN
         run: |
-          cd ~/ziye
           npm install
       - name: '运行 【笑谱】'
-        if: env.XP_refreshTOKEN
         run: |
-          cd ~/ziye
           node Task/iboxpay.js
         env:
-          
+          BBB_bububaoTOKEN: ${{ secrets.BBB_bububaoTOKEN }}
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
           BARK_PUSH: ${{ secrets.BARK_PUSH }}
+          TXNEWS_NOTIFY_CONTROL: ${{ secrets.TXNEWS_NOTIFY_CONTROL }}
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
           TG_USER_ID: ${{ secrets.TG_USER_ID }}
           BARK_SOUND: ${{ secrets.BARK_SOUND }}
-          DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
-          DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
