--- a/.github/workflows/iboxpay.yml
+++ b/.github/workflows/iboxpay.yml
@@ -4,12 +4,12 @@
 #   branches: 
 #   - master 
 
-name: 步步宝
+name: 笑谱
 
 on:
   workflow_dispatch:
   schedule:
-     - cron: '*/30 0-23/1 * * *'
+     - cron: '*/30 7-23/1 * * *'
   watch:
      types: started
     
