--- a/.github/workflows/iboxpay.yml
+++ b/.github/workflows/iboxpay.yml
@@ -23,7 +23,7 @@ jobs:
     steps:
       - name: Checkout
         run: |
-          git clone https://github.com/niubi/B.git ~/B
+          git clone https://github.com/jimmy1141/zy.git ~/zy
       - name: Use Node.js 12.x
         uses: actions/setup-node@v1
         with:
@@ -31,12 +31,12 @@ jobs:
       - name: npm install
         if: env.XP_refreshTOKEN
         run: |
-          cd ~/B
+          cd ~/zy
           npm install
       - name: '运行 【笑谱】'
         if: env.XP_refreshTOKEN
         run: |
-          cd ~/B
+          cd ~/zy
           node Task/iboxpay.js
         env:
           
