--- a/.github/workflows/zhima.yml
+++ b/.github/workflows/zhima.yml
@@ -5,7 +5,7 @@ name: 芝麻视频
 on:
   workflow_dispatch:
   schedule:
-     - cron: '1 0-23/ * * *'
+     - cron: '1 0-23/1 * * *'
   watch:
     types: started
 jobs:
