--- a/.github/workflows/zqfx.yml
+++ b/.github/workflows/zqfx.yml
@@ -1,39 +1,30 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-# push:
-#   branches: 
-#   - master 
+# This is a basic workflow to help you get started with Actions
 
-name: 中青分享
+name: 步步宝
 
 on:
   workflow_dispatch:
   schedule:
-     - cron: '3 0-23/4 * * *'
-  watch:
-     types: started
-    
+    - cron: '*/30 0-23 * * *'
 jobs:
   build:
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
     steps:
-      - uses: actions/checkout@v1
-      - name: Use Node.js 10.x
+      - name: Checkout
+        run: |
+          git clone https://github.com/FFFAYOU/B.git ~/js
+      - name: Use Node.js 14.x
         uses: actions/setup-node@v1
         with:
-          node-version: 10.x
+          node-version: 14.x
       - name: npm install
         run: |
+          cd ~/js
           npm install
+          npm install cron
+          npm install request
       - name: '运行 【中青分享】'
         run: |
+          cd ~/js   
           node Task/zqfx.js
-        env:
-          BBB_bububaoTOKEN: ${{ secrets.BBB_bububaoTOKEN }}
-          PUSH_KEY: ${{ secrets.PUSH_KEY }}
-          BARK_PUSH: ${{ secrets.BARK_PUSH }}
-          TXNEWS_NOTIFY_CONTROL: ${{ secrets.TXNEWS_NOTIFY_CONTROL }}
-          TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
-          TG_USER_ID: ${{ secrets.TG_USER_ID }}
-          BARK_SOUND: ${{ secrets.BARK_SOUND }}
