--- a/.github/workflows/zqfx.yml
+++ b/.github/workflows/zqfx.yml
@@ -1,11 +1,11 @@
 # This is a basic workflow to help you get started with Actions
 
-name: 步步宝
+name: 中青分享
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '*/30 0-23 * * *'
+    - cron: '3 0-23/4 * * *'
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -13,7 +13,7 @@ jobs:
     steps:
       - name: Checkout
         run: |
-          git clone https://github.com/FFFAYOU/B.git ~/js
+          git clone https://github.com/niubi-66/B.git ~/js
       - name: Use Node.js 14.x
         uses: actions/setup-node@v1
         with:
