--- a/.github/workflows/qczjspeed.yml
+++ b/.github/workflows/qczjspeed.yml
@@ -4,12 +4,12 @@
 #   branches: 
 #   - master 
 
-name: 小乐
+name: 汽车之家
 
 on:
   workflow_dispatch:
   schedule:
-     - cron: '30 0-23/1 * * *'
+     - cron: '*/30 0-23/1 * * *'
   watch:
      types: started
     
