--- a/.github/workflows/fqxs.yml
+++ b/.github/workflows/fqxs.yml
@@ -3,7 +3,7 @@ name: 番茄小
  on:
    workflow_dispatch:
    schedule:
-     - cron: '*/30 * * * *'
+     - cron: '*/30 0-23/1 * * *'
    watch:
      types: started
    repository_dispatch:
