--- a/.github/workflows/fqxs.yml
+++ b/.github/workflows/fqxs.yml
@@ -1,37 +1,39 @@
-name: 番茄小说1
+# This is a basic workflow to help you get started with Actions
+
+name: 快看点
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 */1 * * *'
+    - cron: '*/30 * * * *'
   watch:
     types: started
   repository_dispatch:
-    types: huoshan
+    types: kkd
 jobs:
   build:
+
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
     steps:
       - name: Checkout
-        run: |
-          git clone https://github.com/niubi-66/B.git ~/js
+        uses: actions/checkout@v2
+        with:
+          repository: ZhiYi-N/script
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
       - name: Cache node_modules
-        uses: actions/cache@v2 # 使用 GitHub 官方的缓存 Action。
+        uses: actions/cache@v2 # 使用 GitHub 官方缓存 Action。
         env:
           cache-name: cache-node-modules
         with:
           path: node_modules
           key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('package-lock.json') }} # 使用 package-lock.json 的 Hash 作为缓存的 key。也可以使用 package.json 代替
       - name: npm install
-        run: | 
-           cd ~/js	        
-           git checkout master	   
-           npm install
+        run: |
+          npm install
       - name: '运行 【番茄小说】'
         run: |
           cd ~/js	
