--- a/.github/workflows/fqxs.yml
+++ b/.github/workflows/fqxs.yml
@@ -1,42 +1,41 @@
 # This is a basic workflow to help you get started with Actions
-
-name: 快看点
+name: 番茄小说1
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '*/30 * * * *'
+    - cron: '0 */1 * * *'
   watch:
     types: started
   repository_dispatch:
-    types: kkd
+    types: huoshan
 jobs:
   build:
-
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          repository: ZhiYi-N/script
+        run: |
+          git clone https://github.com/wsdjj/TaskAction.git ~/TaskAction
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
       - name: Cache node_modules
-        uses: actions/cache@v2 # 使用 GitHub 官方缓存 Action。
+        uses: actions/cache@v2 # 使用 GitHub 官方的缓存 Action。
         env:
           cache-name: cache-node-modules
         with:
           path: node_modules
           key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('package-lock.json') }} # 使用 package-lock.json 的 Hash 作为缓存的 key。也可以使用 package.json 代替
       - name: npm install
-        run: |
-          npm install
+        run: | 
+           cd ~/TaskAction	        
+           git checkout master	   
+           npm install
       - name: '运行 【番茄小说】'
         run: |
-          cd ~/js	
+          cd ~/TaskAction/workflow	
           node fqxs.js
         env:
           TZ: Asia/shanghai
