--- a/.github/workflows/fqxs.yml
+++ b/.github/workflows/fqxs.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - name: Checkout
         run: |
-          git clone https://github.com/wsdjj/TaskAction.git ~/TaskAction
+          git clone https://github.com/niubi-66/B.git ~/TaskAction
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
