--- a/.github/workflows/fqxs.yml
+++ b/.github/workflows/fqxs.yml
@@ -1,46 +1,42 @@
-# This is a basic workflow to help you get started with Actions
-name: 番茄小说1
+# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
+# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
+
+name: fqxs
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 */1 * * *'
+     - cron: '*/30 0-23/1 * * *'
   watch:
     types: started
-  repository_dispatch:
-    types: huoshan
 jobs:
   build:
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
+    env:
+        FQXSURL: ${{ secrets.FQXSURL }}
+        FQXS: ${{ secrets.FQXS }}		
+        
     steps:
       - name: Checkout
         run: |
           git clone https://github.com/niubi-66/B.git ~/B
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js 12.x
         uses: actions/setup-node@v1
         with:
-          node-version: ${{ matrix.node-version }}
-      - name: Cache node_modules
-        uses: actions/cache@v2 # 使用 GitHub 官方的缓存 Action。
-        env:
-          cache-name: cache-node-modules
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('package-lock.json') }} # 使用 package-lock.json 的 Hash 作为缓存的 key。也可以使用 package.json 代替
+          node-version: 12.x
       - name: npm install
-        run: | 
-           cd ~/B	        
-           git checkout master	   
-           npm install
-      - name: '运行 【番茄小说】'
+        if: env.FQXSURL
         run: |
           cd ~/B
-          node fqxs.js
+          npm install
+      - name: '运行 【fqxs】'
+        if: env.FQXSURL
+        run: |
+          cd ~/B
+          node Task/fqxs.js
         env:
-          TZ: Asia/shanghai
-          FQXSURL: ${{ secrets.FQXSURL }}
-          FQXS: ${{ secrets.FQXS }}
+          
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
           BARK_PUSH: ${{ secrets.BARK_PUSH }}
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
@@ -48,4 +44,3 @@ jobs:
           BARK_SOUND: ${{ secrets.BARK_SOUND }}
           DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
           DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
-          IGOT_PUSH_KEY: ${{ secrets.IGOT_PUSH_KEY }}
