--- a/.github/workflows/dsj.yml
+++ b/.github/workflows/dsj.yml
@@ -1,34 +1,47 @@
 name: 电视家
 
 on:
-    # push:
-    #     branches:
-    #         - main
-    schedule:
-        - cron: " 0 * * * *"
-    workflow_dispatch:
+  workflow_dispatch:
+  schedule:
+     - cron: '*/15 4,7,12,20,23 * * *'
+  watch:
+    types: started
 jobs:
-    build:
-        runs-on: ubuntu-latest
-
-        steps:
-            - uses: actions/checkout@v1
-            - name: Use Node.js 10.x
-              uses: actions/setup-node@v1
-              with:
-                  node-version: 10.x
-            - name: npm install
-              run: |
-                  npm install
-            - name: "运行 【电视家】"
-              run: |
-                  node dsj.js
-              env:
-                  SY_SIGNHEADER_DSJ: ${{ secrets.SY_SIGNHEADER_DSJ }}
-                  DRAWAL_DSJ: ${{ secrets.DRAWAL_DSJ }}
-                  SCKEY: ${{ secrets.SCKEY }}
-                  BARK_PUSH: ${{ secrets.BARK_PUSH }}
-                  PUSH_KEY: ${{ secrets.PUSH_KEY }}
-                  TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
-                  TG_USER_ID: ${{ secrets.TG_USER_ID }}
-                  EFORK: ${{ secrets.EFORK }}
+  build:
+    runs-on: ubuntu-latest
+    if: github.event.repository.owner.id == github.event.sender.id
+    env:
+        DSJ_HEADERS: ${{ secrets.DSJ_HEADERS }}
+        DSJ_DRAWAL: ${{ secrets.DSJ_DRAWAL }}
+        TZ: Asia/shanghai
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Use Node.js 12.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12.x
+      - name: npm install
+        run: |
+          npm install
+      - name: '运行 【电视家】'
+        if: env.DSJ_HEADERS
+        run: |
+          node Task/dsj.js
+        env:
+          DSJ_NOTIFY_CONTROL: ${{ secrets.DSJ_NOTIFY_CONTROL }}
+          PUSH_KEY: ${{ secrets.PUSH_KEY}}
+          BARK_PUSH: ${{ secrets.BARK_PUSH}}
+          BARK_SOUND: ${{ secrets.BARK_SOUND}}
+          TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN}}
+          TG_USER_ID: ${{ secrets.TG_USER_ID}}
+          DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN}}
+          DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET}}
+          QYWX_KEY: ${{ secrets.QYWX_KEY}}
+          IGOT_PUSH_KEY: ${{ secrets.IGOT_PUSH_KEY}}
+          QQ_SKEY: ${{ secrets.QQ_SKEY}}
+          QQ_MODE: ${{ secrets.QQ_MODE}}
+          PUSH_PLUS_TOKEN: ${{ secrets.PUSH_PLUS_TOKEN}}
+          PUSH_PLUS_USER: ${{ secrets.PUSH_PLUS_USER}}
+          TG_PROXY_HOST: ${{ secrets.TG_PROXY_HOST}}
+          TG_PROXY_PORT: ${{ secrets.TG_PROXY_PORT}}
