--- a/.github/workflows/zlztx.yml
+++ b/.github/workflows/zlztx.yml
@@ -35,8 +35,8 @@ jobs:
         run: |
           node Task/zlztx.js
         env:
-          RUNSTEP_TOKEN: ${{ secrets. RUNSTEP_TOKEN }}
-          RUNSTEP_KEY: ${{ secrets. RUNSTEP_KEY }}
+          TX_TOKEN: ${{ secrets. TX_TOKEN }}
+          TX_KEY: ${{ secrets. TX_KEY }}
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
           BARK_PUSH: ${{ secrets.BARK_PUSH }}
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
