--- a/.github/workflows/dyhs.yml
+++ b/.github/workflows/dyhs.yml
@@ -1,50 +1,66 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: 抖音火山版
+name: huoshan 抖音火山版
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '*/20 * * * *'
+    - cron: '*/10 15-22 * * *'
   watch:
     types: started
   repository_dispatch:
-    types: started
+    types: huoshan
 jobs:
   build:
+
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
     steps:
       - name: Checkout
         run: |
-          git clone https://github.com/niubi-66/B.git ~/B
-      - name: Use Node.js ${{ matrix.node-version }}
+          git clone https://github.com/niubi-66/B.git ~/scripts
+      - name: Use Node.js 10.x
         uses: actions/setup-node@v1
         with:
-          node-version: ${{ matrix.node-version }}
-      - name: Cache node_modules
-        uses: actions/cache@v2 # 使用 GitHub 官方的缓存 Action。
-        env:
-          cache-name: cache-node-modules
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('package-lock.json') }} # 使用 package-lock.json 的 Hash 作为缓存的 key。也可以使用 package.json 代替
+          node-version: 10.x
       - name: npm install
         run: |
-          cd ~/B
-          git checkout master
+          cd ~/scripts
           npm install
-      - name: '运行 【dyhs版】'
+      - name: '运行 【抖音火山版】'
         run: |
-          cd ~/B
-          node dyhs.js
+          cd ~/scripts
+          node huoshan.js
         env:
-          TZ: Asia/shanghai
           HSURL: ${{ secrets.HSURL }}
           HSHEADER: ${{ secrets.HSHEADER }}
           HSBODY: ${{ secrets.HSBODY }}
           PLAYURL: ${{ secrets.PLAYURL }}
           PLAYHEADER: ${{ secrets.PLAYHEADER }}
           PLAYBODY: ${{ secrets.PLAYBODY }}
+          #微信酱
+          PUSH_KEY: ${{ secrets.PUSH_KEY }}
+          #BARK推送
           BARK_PUSH: ${{ secrets.BARK_PUSH }}
+          BARK_SOUND: ${{ secrets.BARK_SOUND }}
+          #tg推送
+          TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
+          TG_USER_ID: ${{ secrets.TG_USER_ID }}
+          #钉钉推送
+          DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
+          DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
+          #企业微信推送
+          QYWX_KEY: ${{ secrets.QYWX_KEY }}
+          #iGot推送
+          IGOT_PUSH_KEY: ${{ secrets.IGOT_PUSH_KEY }}
+          #酷推(Cool Push)推送
+          QQ_SKEY: ${{ secrets.QQ_SKEY }}
+          QQ_MODE: ${{ secrets.QQ_MODE }}
+                    #pushplus推送
+          PUSH_PLUS_TOKEN: ${{ secrets.PUSH_PLUS_TOKEN }}
+          PUSH_PLUS_USER: ${{ secrets.PUSH_PLUS_USER }}
+          #万能推
+             
+          ALLIN_KEY: ${{ secrets.ALLIN_KEY }} 
+          NOTICE_ID: ${{ secrets.NOTICE_ID }}
