--- a/.github/workflows/dyhs.yml
+++ b/.github/workflows/dyhs.yml
@@ -1,12 +1,12 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: huoshan 抖音火山版
+name: 抖音火山版
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '*/10 15-22 * * *'
+    - cron: '*/10 0-23/1* * *'
   watch:
     types: started
   repository_dispatch:
@@ -31,7 +31,7 @@ jobs:
       - name: '运行 【抖音火山版】'
         run: |
           cd ~/scripts
-          node huoshan.js
+          node dyhs.js
         env:
           HSURL: ${{ secrets.HSURL }}
           HSHEADER: ${{ secrets.HSHEADER }}
