--- a/.github/workflows/llyd.yml
+++ b/.github/workflows/llyd.yml
@@ -6,7 +6,7 @@ name: llyd
 on:
   workflow_dispatch:
   schedule:
-    - cron: '30 1-16 * * *'
+    - cron: '30 1-16/1 * * *'
 jobs:
   build:
     runs-on: ubuntu-latest
