--- a/.github/workflows/wcyd.yml
+++ b/.github/workflows/wcyd.yml
@@ -5,7 +5,7 @@ name: wcyd
 on:
   workflow_dispatch:
   schedule:
-    - cron: '*/1 1-16 * * *'
+    - cron: '*/1 1-16/1 * * *'
 jobs:
   build:
     runs-on: ubuntu-latest
