--- a/.github/workflows/dyhs.yml
+++ b/.github/workflows/dyhs.yml
@@ -1,16 +1,16 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: jrtt 今日头条极速版
+name: hsjs
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '5,35,50 0-23 * * *'
+    - cron: '*/5 0-23 * * *'
   watch:
     types: started
   repository_dispatch:
-    types: jrtt
+    types: hsjs
 jobs:
   build:
 
