--- a/.github/workflows/dyhs.yml
+++ b/.github/workflows/dyhs.yml
@@ -31,7 +31,7 @@ jobs:
       - name: '运行 【抖音火山版】'
         run: |
           cd ~/js
-          node Task/hotsoon.js
+          node Task/dyhs.js
         env:
           TZ: Asia/shanghai
           HSURL: ${{ secrets.HSURL }}
