--- a/.github/workflows/kuaishou.yml
+++ b/.github/workflows/kuaishou.yml
@@ -3,7 +3,7 @@ name: 快手视频签到
 on:
   workflow_dispatch:
   schedule:
-     - cron: '15 3 * * *'
+     - cron: '1/20 10-23/3 * * *'
   #watch:
   #  types: started
 jobs:
