--- a/.github/workflows/jkd.yml
+++ b/.github/workflows/jkd.yml
@@ -1,10 +1,10 @@
-# 已禁用阅读任务，其他可行
-name: 聚看点
+
+name: jukan(聚看点)
 
 on:
   workflow_dispatch:
   schedule:
-     - cron: '*/20 */2 * * *'
+     - cron: '*/5 * * * *'
   watch:
     types: started
 jobs:
@@ -12,21 +12,25 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
     env:
+        JUKAN_COOKIE: ${{ secrets.JUKAN_COOKIE }}
         JUKAN_BODY: ${{ secrets.JUKAN_BODY }}
         TZ: Asia/shanghai
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        run: |
+          git clone https://github.com/niubi-66/B.git ~/Scripts
       - name: Use Node.js 12.x
         uses: actions/setup-node@v1
         with:
           node-version: 12.x
       - name: npm install
         run: |
+          cd ~/Scripts
           npm install
       - name: '运行 【聚看点】'
-        if: env.JUKAN_BODY
+        if: env.JUKAN_COOKIE
         run: |
+          cd ~/Scripts
           node Task/jukan.js
         env:
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
