--- a/.github/workflows/baidu_speed.yml
+++ b/.github/workflows/baidu_speed.yml
@@ -11,6 +11,7 @@ jobs:
     if: github.event.repository.owner.id == github.event.sender.id
     env:
         BAIDU_COOKIE: ${{ secrets.BAIDU_COOKIE }}
+        BAIDU_CASH: ${{ secrets.BAIDU_CASH }}
         TZ: Asia/shanghai
     steps:
       - name: Checkout
