--- a/.github/workflows/jjsqxs.yml
+++ b/.github/workflows/jjsqxs.yml
@@ -30,6 +30,7 @@ jobs:
         run: |
           npm install
       - name: '运行 【jjsqxs】'
+          if: env.LOADRESOURCEBODY
         
         run: |
           node Task/shuqi.js
